applications/k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexops-db
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nexops-db
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.1.2
    ports:
      - port: 5432
